@@ -4,14 +4,17 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.zendrive.api.core.model.dao.jobrunr.Task;
 import com.zendrive.api.core.model.dao.elastic.task.TaskDefinition;
+import com.zendrive.api.core.model.task.TaskRequest;
 import com.zendrive.api.core.repository.jobrunr.TaskRepository;
 import com.zendrive.api.core.task.model.parameters.DeleteTaskParameters;
 import com.zendrive.api.core.task.model.parameters.ScanTaskParameters;
+import com.zendrive.api.core.task.model.parameters.SyncTaskParameters;
 import com.zendrive.api.core.task.model.request.DeleteTaskRequest;
 import com.zendrive.api.core.task.model.request.ScanTaskRequest;
+import com.zendrive.api.core.task.model.request.SyncTaskRequest;
 import com.zendrive.api.core.task.model.request.ZenDriveJobRequest;
 import com.zendrive.api.core.utils.ClazzUtil;
-import com.zendrive.api.exception.BadRequestException;
+import com.zendrive.api.exception.InvalidArgumentsException;
 import com.zendrive.api.rest.models.dto.job.CreateTaskResponse;
 import lombok.RequiredArgsConstructor;
 import org.jobrunr.jobs.lambdas.JobRequest;
@@ -24,6 +27,7 @@ import java.lang.reflect.Constructor;
 import java.util.*;
 
 import static org.jobrunr.scheduling.JobBuilder.aJob;
+import static org.jobrunr.scheduling.RecurringJobBuilder.aRecurringJob;
 
 @Service
 @RequiredArgsConstructor
@@ -33,16 +37,32 @@ public class TaskService {
 
 	private final ObjectMapper objectMapper = new ObjectMapper();
 
-	public Page<Task> getAll(Pageable pageable) {
+	public Task get(String id) {
+		return find(id).orElseThrow(() -> new InvalidArgumentsException("Task not found!"));
+	}
+
+	public Optional<Task> find(String id) {
+		return taskRepository.findById(id);
+	}
+
+	public Page<Task> getPage(Pageable pageable) {
 		return taskRepository.findAll(pageable);
 	}
 
-	public CreateTaskResponse<JobRequest> run(
+	public List<Task> getRunning() {
+		return taskRepository.getRunningTasks();
+	}
+
+	public int countRunningByRecurringId(String id) {
+		return taskRepository.countRunningByRecurringId(id);
+	}
+
+	public CreateTaskResponse<ZenDriveJobRequest> run(
 		String definitionId,
 		String name,
 		ObjectNode parameters
 	) {
-		TaskDefinition definition = taskDefinitionService.getDefinition(definitionId);
+		TaskDefinition definition = taskDefinitionService.get(definitionId);
 
 		try {
 			ClazzUtil.validateObjectNode(definition.getParametersClasspath(), parameters);
@@ -50,7 +70,7 @@ public class TaskService {
 			Class<?> requestClass = Class.forName(definition.getRequestClasspath());
 
 			if (!JobRequest.class.isAssignableFrom(requestClass)) {
-				throw new IllegalArgumentException("Class must extend JobRequest");
+				throw new InvalidArgumentsException("Class must extend JobRequest");
 			}
 
 			Constructor<?> constructor = requestClass.getDeclaredConstructors()[0];
@@ -58,72 +78,138 @@ public class TaskService {
 			Object parameterObject = objectMapper.treeToValue(parameters, parameterType);
 			ZenDriveJobRequest request = (ZenDriveJobRequest) constructor.newInstance(parameterObject);
 
-			String id = BackgroundJobRequest.create(
-				aJob()
-					.withName(name)
-					.withLabels(Set.of("type:%s".formatted(request.getType())))
-					.withJobRequest(request)
-					.withAmountOfRetries(1)
-			).toString();
-
-			return CreateTaskResponse.Builder()
-															 .withId(id)
-															 .withRequest(request)
-															 .build();
+			return runBackgroundJob(
+				TaskRequest.Builder()
+									 .withName(name)
+									 .withLabels(Set.of("type:%s".formatted(request.getType())))
+									 .withAmountOfRetries(1)
+									 .withJobRequest(request)
+									 .build()
+			);
 		} catch (Exception ex) {
-			throw new BadRequestException(ex.getMessage());
+			throw new InvalidArgumentsException(ex.getMessage());
 		}
 	}
 
 	public CreateTaskResponse<ScanTaskRequest> runScan(ScanTaskParameters parameters) {
-		TaskDefinition definition = taskDefinitionService.getScanDefinition();
+		TaskDefinition definition = taskDefinitionService.getScan();
+
 		ScanTaskRequest scanTaskRequest = new ScanTaskRequest(parameters);
 
-		try {
-			String id = BackgroundJobRequest.create(
-				aJob()
-					.withName(String.format("%s - %s", definition.getName(), parameters.getConfig().getInputPath()))
-					.withLabels(Set.of("type:%s".formatted(scanTaskRequest.getType())))
-					.withJobRequest(scanTaskRequest)
-					.withAmountOfRetries(1)
-			).toString();
+		return runBackgroundJob(
+			TaskRequest.<ScanTaskRequest>Builder()
+								 .withName(String.format(
+									 "%s - %s",
+									 definition.getName(),
+									 parameters.getConfig().getInputPath()
+								 ))
+								 .withLabels(Set.of("type:%s".formatted(scanTaskRequest.getType())))
+								 .withAmountOfRetries(1)
+								 .withJobRequest(scanTaskRequest)
+								 .withSyncConfig(parameters.getConfig().getSyncConfig())
+								 .build(),
+			null
+		);
+	}
 
-			return CreateTaskResponse.<ScanTaskRequest>Builder()
-															 .withId(id)
-															 .withRequest(scanTaskRequest)
-															 .build();
-		} catch (Exception ex) {
-			throw new BadRequestException(ex.getMessage());
-		}
+	public CreateTaskResponse<SyncTaskRequest> runSync(SyncTaskParameters parameters) {
+		TaskDefinition definition = taskDefinitionService.getSync();
+		SyncTaskRequest syncTaskRequest = new SyncTaskRequest(parameters);
+
+		return runBackgroundJob(
+			TaskRequest.<SyncTaskRequest>Builder()
+								 .withName(String.format("%s - %s", definition.getName(), parameters.getDirectoryId()))
+								 .withLabels(Set.of("type:%s".formatted(syncTaskRequest.getType())))
+								 .withAmountOfRetries(1)
+								 .withJobRequest(syncTaskRequest)
+								 .withSyncConfig(parameters.getSyncConfig())
+								 .build(),
+			null
+		);
 	}
 
 	public CreateTaskResponse<DeleteTaskRequest> runDelete(DeleteTaskParameters parameters) {
-		TaskDefinition definition = taskDefinitionService.getDeleteDefinition();
+		TaskDefinition definition = taskDefinitionService.getDelete();
 		DeleteTaskRequest deleteTaskRequest = new DeleteTaskRequest(parameters);
 
-		try {
-			String id = BackgroundJobRequest.create(
-				aJob()
-					.withName(String.format("%s - %s", definition.getName(), parameters.getDirectoryId()))
-					.withLabels(Set.of("type:%s".formatted(deleteTaskRequest.getType())))
-					.withJobRequest(deleteTaskRequest)
-					.withAmountOfRetries(1)
-			).toString();
+		String name = String.format(
+			"%s - %s",
+			definition.getName(),
+			parameters.getDirectoryIds().size() == 1 ? parameters.getDirectoryIds().get(0)
+																							 : parameters.getDirectoryIds().size() + " Metafiles"
+		);
 
-			return CreateTaskResponse.<DeleteTaskRequest>Builder()
-															 .withId(id)
-															 .withRequest(deleteTaskRequest)
-															 .build();
-		} catch (Exception ex) {
-			throw new BadRequestException(ex.getMessage());
+		return runBackgroundJob(
+			TaskRequest.<DeleteTaskRequest>Builder()
+								 .withName(name)
+								 .withLabels(Set.of("type:%s".formatted(deleteTaskRequest.getType())))
+								 .withAmountOfRetries(1)
+								 .withJobRequest(deleteTaskRequest)
+								 .build(),
+			null
+		);
+	}
+
+	public void scheduleSync(SyncTaskParameters parameters) {
+		TaskDefinition definition = taskDefinitionService.getSync();
+		SyncTaskRequest syncTaskRequest = new SyncTaskRequest(parameters);
+
+		scheduleBackgroundJob(
+			TaskRequest.<SyncTaskRequest>Builder()
+								 .withName(String.format("%s - %s", definition.getName(), parameters.getDirectoryId()))
+								 .withLabels(Set.of("type:%s".formatted(syncTaskRequest.getType())))
+								 .withAmountOfRetries(1)
+								 .withJobRequest(syncTaskRequest)
+								 .withSyncConfig(parameters.getSyncConfig())
+								 .build()
+		);
+	}
+
+	public void stop(String id) {
+		BackgroundJobRequest.delete(UUID.fromString(id));
+	}
+
+	public void stopMany(List<String> ids) {
+		ids.forEach(this::stop);
+	}
+
+
+	protected <T extends ZenDriveJobRequest> CreateTaskResponse<T> runBackgroundJob(TaskRequest<T> taskRequest) {
+		return runBackgroundJob(taskRequest, taskRequest);
+	}
+
+	protected <T extends ZenDriveJobRequest, K extends ZenDriveJobRequest> CreateTaskResponse<T> runBackgroundJob(
+		TaskRequest<T> taskRequest,
+		TaskRequest<K> scheduleRequest
+	) {
+		String id = BackgroundJobRequest.create(
+			aJob()
+				.withName(taskRequest.getName())
+				.withLabels(taskRequest.getLabels())
+				.withAmountOfRetries(taskRequest.getAmountOfRetries())
+				.withJobRequest(taskRequest.getJobRequest())
+		).toString();
+
+		if (taskRequest.getSyncConfig() != null && scheduleRequest != null) {
+			scheduleBackgroundJob(scheduleRequest);
 		}
+
+		return CreateTaskResponse.<T>Builder()
+														 .withId(id)
+														 .withRequest(taskRequest.getJobRequest())
+														 .build();
+
 	}
 
-	public List<Task> getRunning() {
-		return taskRepository.getRunningJobs();
-	}
-
-	public Optional<Task> getJob(String jobId) {
-		return taskRepository.findById(jobId);
+	protected <T extends ZenDriveJobRequest> void scheduleBackgroundJob(TaskRequest<T> scheduleRequest) {
+		BackgroundJobRequest.createRecurrently(
+			aRecurringJob()
+				.withId(UUID.randomUUID().toString())
+				.withName(scheduleRequest.getName())
+				.withLabels(scheduleRequest.getLabels())
+				.withAmountOfRetries(scheduleRequest.getAmountOfRetries())
+				.withJobRequest(scheduleRequest.getJobRequest())
+				.withCron(scheduleRequest.getSyncConfig().getCronExpression())
+		);
 	}
 }
